# ai-game-helper

./: .gitignore  .nyx-state.json  .nyx.json  CHANGELOG.md  ProxiHUD_Bridge.lua  README.md  prompt.txt  pyproject.toml  settings.json
.github/workflows/: build_windows.yml
mocks/: ProxiHUD_Bridge.lua
src/: ai.py  config.py  logger.py  main.py  run.py  ui.py  updater.py
src/proxihud/: __init__.py  bridge.py  capture.py  config.py  installer.py  logger.py  main.py  settings.json  ui.py  updater.py  utils.py
src/proxihud/ai/: __init__.py  combat.py  death.py  exploration.py  inventory.py  query.py  skills.py  tools.py
src/proxihud/resources/addon/ProxiHUD_Bridge/: ProxiHUD_Bridge.lua  ProxiHUD_Bridge.txt
src/proxihud/ui/: __init__.py  app.py  chat.py  components.py  settings.py  startup.py  window.py
