[project]
name = "ai-game-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "google-genai>=1.56.0",
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
]
